Fix spacing around the langauge links on tablet

--- a/app/assets/stylesheets/components/common/_footer_site_links.scss
+++ b/app/assets/stylesheets/components/common/_footer_site_links.scss
@@ -67,7 +67,7 @@
 
   @include respond-to($mq-m) {
     margin: 0;
-    padding: 0;
+    padding: $baseline-unit 0;
   }
 
   %icon-width {
@@ -99,18 +99,18 @@
   }
 
   li {
-    padding: $baseline-unit 0;
     margin-left: 0;
+    min-height: 37px;
 
     a {
       @extend %link-nav-secondary;
+      padding: $baseline-unit*2 0;
     }
 
     @include respond-to($mq-xs) {
       @include column(12);
     }
     @include respond-to($mq-s) {
-      padding: $baseline-unit*2 0;
       @include column(6);
     }
     @include respond-to($mq-m) {
